--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>InVue Reports</title>
+	<title>Dashboard Builder</title>
 	<meta name="viewport" id="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,width=device-width,height=device-height,user-scalable=no"
 	/>
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
